<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home"/>

        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/Settings"/>
        <item
            android:id="@+id/Mode"
            android:icon="@drawable/ic_menu_mode"
            android:title="@string/Mode"/>

        <item
            android:id="@+id/Information"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/Information" />

        <item
            android:id="@+id/Event"
            android:icon="@drawable/ic_sms_event_24dp"
            android:title="@string/Event" />

</menu>