<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="42dp"
        android:text="@string/phoneCode"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/countryCode"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:errorTextAppearance="@string/error_phoneNumber">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/countryCode"
            android:ellipsize="start"
            android:ems="10"
            android:inputType="number"
            android:maxLength="10"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonDialogSaveNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Save"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonDialogSendNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDialogSaveNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Send"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonDialogAllCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDialogSendNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Delete"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonDialogCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDialogAllCancel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Cancel"
        android:textColor="@color/white"
        android:textSize="14sp" />

</RelativeLayout>