<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RelativeSmsBody"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/smsBodyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/SmsBody"
                android:textAllCaps="false"
                android:textColor="@color/material_gray_600"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeSmsDateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/RelativeSmsBody"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/smsDateItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/SmsDate"
                android:textColor="@color/material_gray_600"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/smsTimeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smsDateItem"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:text="@string/SmsTime"
                android:textColor="@color/material_gray_600"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>